--- a/flask-blog/templates/template.html
+++ b/flask-blog/templates/template.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<link rel = "stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+
 <html lang="en">
     <head>
         <meta charset="UTF-8">
